Fixed scrollbar.

--- a/static/css/announcement.css
+++ b/static/css/announcement.css
@@ -6,6 +6,7 @@ body {
   margin-top: 0;
   text-align: center;
   font-weight: bold;
+  overflow:hidden;
 }
 
 a {
